security fixing